# codeskel

./: README.md  requirements.txt  setup.cfg
codeskel/: cmd.py
skels/flask/: requirements.txt  setup.cfg  setup.py
skels/flask/{{ project_name }}/: app.py  extensions.py  filters.py
skels/flask/{{ project_name }}/common/: api.py  db.py  exceptions.py  format.py  timeutils.py
skels/flask/{{ project_name }}/db/: api.py  base.py
skels/flask/{{ project_name }}/db/migration/: cli.py
skels/flask/{{ project_name }}/db/migration/alembic_migrations/: env.py
