[metadata]
name = codeskel
author = Jianing Yang
author-email = jianingy.yang@gmail.com
summary = a project maker
license = Apache-2
classifier =
    Development Status :: 1 - Planning
        Environment :: Command Line
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    codeskel
data_files =

[entry_points]
console_scripts =
    codeskel = codeskel.cmd:main
