[metadata]
name = {{ project_name }}
author = {{ author }}
author-email =  none
summary = none
license = Apache-2
classifier =
    Development Status :: 1 - Planning
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    {{ project_name }}
data_files =

[entry_points]
console_scripts =
    {{ project_name }}-db-manage = {{ project_name }}.db.migration.cli:main
